--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="header">
+      <h1>Etch-a-Sketch</h1>
+    </div>
     <div id="container"></div>
 </body>
 </html>
