--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <div id="header">
       <h1>Etch-a-Sketch</h1>
     </div>
+    <div id="button-container">
+      <button>Reset</button>
+    </div>
     <div id="container"></div>
 </body>
 </html>
